@@ -1,0 +1,24 @@
+# This file stores the addresses of config sources for GConf
+# When a value is stored or requested, the sources are scanned from top to 
+# bottom, and the first one to have a value for the key (or the first one 
+# to be writeable) is used to load/store the data.
+
+# See the GConf manual for details
+
+# Look first in systemwide mandatory settings directory
+# (commented out until xml backend knows how to be read-only for users)
+# xml:/etc/gconf/gconf.xml.mandatory
+
+# Now see where users want us to look - basically the user can stick arbitrary 
+# sources in a ~/.gconf.path file and they're inserted here
+include "$(HOME)/.gconf.path"
+
+# Give users a default storage location, ~/.gconf
+
+xml:$(HOME)/.gconf
+
+# Finally, look at the systemwide defaults
+# (commented out for now)
+# xml:/etc/gconf/gconf.xml.defaults
+
+
